WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231144
WebXRSession's m_environmentBlendMode and m_interactionMode are never initialized
https://bugs.webkit.org/show_bug.cgi?id=231144
Summary
WebXRSession's m_environmentBlendMode and m_interactionMode are never initial...
Sam Weinig
Reported
2021-10-03 14:28:02 PDT
WebXRSession's m_environmentBlendMode and m_interactionMode are never initialized
Attachments
Patch
(1.61 KB, patch)
2021-10-03 14:30 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2021-10-03 14:30:42 PDT
Created
attachment 440018
[details]
Patch
EWS
Comment 2
2021-10-03 16:09:08 PDT
Committed
r283484
(
242457@main
): <
https://commits.webkit.org/242457@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440018
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-03 16:10:16 PDT
<
rdar://problem/83818260
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug