WebXRSession's m_environmentBlendMode and m_interactionMode are never initialized https://bugs.webkit.org/show_bug.cgi?id=231144

Reviewed by Dean Jackson.

The m_environmentBlendMode and m_interactionMode members of WebXRSession were
not being initialized to anything and therefor were giving random data. This
is not really testable, as the result is just that the tests no longer flake.

* Modules/webxr/WebXRSession.h:


Canonical link: https://commits.webkit.org/242457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283484 268f45cc-cd09-0410-ab3c-d52691b4dbfc